--- a/nat-server/my-api/static/css/normalize.css
+++ b/nat-server/my-api/static/css/normalize.css
@@ -27,7 +27,7 @@ body {
  * Correct `block` display not defined for any HTML5 element in IE 8/9.
  * Correct `block` display not defined for `details` or `summary` in IE 10/11
  * and Firefox.
- * Correct `block` display not defined for `main.rs` in IE 11.
+ * Correct `block` display not defined for `main.bak2` in IE 11.
  */
 
 article,
